--- a/Blazor/wwwroot/index.html
+++ b/Blazor/wwwroot/index.html
@@ -31,6 +31,8 @@
         <span class="dismiss">🗙</span>
     </div>
     <script src="_framework/blazor.webassembly.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.6.0/dist/confetti.browser.min.js"></script>
+    <script src="js/confetti.js"></script>
     <script>navigator.serviceWorker.register('service-worker.js');</script>
 </body>
 
