--- a/Blazor/wwwroot/index.html
+++ b/Blazor/wwwroot/index.html
@@ -34,7 +34,21 @@
     <script src="_framework/blazor.webassembly.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.6.0/dist/confetti.browser.min.js"></script>
     <script src="js/confetti.js"></script>
-    <script>navigator.serviceWorker.register('service-worker.js');</script>
+    <script>
+        if ('serviceWorker' in navigator) {
+            try {
+                navigator.serviceWorker.register('service-worker.js')
+                    .then(function(registration) {
+                        console.log('Service Worker registered successfully:', registration);
+                    })
+                    .catch(function(error) {
+                        console.log('Service Worker registration failed:', error);
+                    });
+            } catch (error) {
+                console.log('Service Worker registration error:', error);
+            }
+        }
+    </script>
 </body>
 
 </html>
